<resources>
    <string name="app_name">Calculator</string>
    <string name="text">Welcome</string>
    <string name="editText">Text</string>
    <string name="doneText">Done</string>
    <string name="switchText">Включить компонент 1</string>
    <string name="checkBoxText">Принять соглашение</string>
    <string name="toggleButtonText">Режим компонета 2:</string>
    <string name="textOn">On</string>
    <string name="textOff">Off</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="button0">0</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">X</string>
    <string name="divide">÷</string>
    <string name="percent">%</string>
    <string name="deleteSymbol">DEL</string>
    <string name="allClear">CC</string>
    <string name="comma">,</string>
    <string name="equals">=</string>
    <string name="light_theme">Дневная тема</string>
    <string name="option_text">Настройки</string>
    <string name="night_theme">Ночная тема</string>
    <string name="choice_theme">Выбор темы:</string>
</resources>