<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_foto"
    android:orientation="vertical"
    tools:context=".OptionActivity">

    <android.support.v7.widget.AppCompatTextView
        style="@style/optionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/option_text" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatTextView
            style="@style/choiceThemeText"
            android:text="@string/choice_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.AppCompatRadioButton
            style="@style/radioButtonInOptionStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/light_theme" />

        <android.support.v7.widget.AppCompatRadioButton
            style="@style/radioButtonInOptionStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/night_theme" />
    </LinearLayout>

</LinearLayout>