<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_foto_second"
    android:orientation="vertical">

    <android.support.constraint.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25"/>

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.86" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.74" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.62" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.50" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.38" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.98" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/resultText"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:textColor="@color/white"
        android:textSize="@dimen/resultSize"
        app:layout_constraintBottom_toTopOf="@+id/guideline8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints,SpUsage" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/errorText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/errorSize"
        android:textColor="@android:color/holo_red_dark"
        android:gravity="end"
        app:layout_constraintBottom_toTopOf="@+id/resultText"
        tools:ignore="MissingConstraints" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/button1"
        android:textSize="@dimen/buttonSize"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toStartOf="@+id/guideline1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline5"
        tools:ignore="MissingConstraints,SpUsage" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/button2"
        android:textSize="@dimen/buttonSize"
        app:layout_constraintTop_toTopOf="@id/guideline5"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        tools:ignore="MissingConstraints,SpUsage" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/button3"
        android:textSize="@dimen/buttonSize"
        app:layout_constraintTop_toTopOf="@id/guideline5"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        tools:ignore="MissingConstraints,SpUsage" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/button4"
        android:textSize="@dimen/buttonSize"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toStartOf="@+id/guideline1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline6"
        tools:ignore="MissingConstraints,SpUsage" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/button5"
        android:textSize="@dimen/buttonSize"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toTopOf="@+id/guideline6"
        tools:ignore="MissingConstraints,SpUsage" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/button6"
        android:textSize="@dimen/buttonSize"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline6"
        tools:ignore="MissingConstraints,SpUsage" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/button7"
        android:textSize="@dimen/buttonSize"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toStartOf="@+id/guideline1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline7"
        tools:ignore="MissingConstraints,SpUsage" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/button8"
        android:textSize="@dimen/buttonSize"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toTopOf="@id/guideline7"
        tools:ignore="MissingConstraints,SpUsage" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/button9"
        android:textSize="@dimen/buttonSize"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline7"
        tools:ignore="MissingConstraints,SpUsage" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button0"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/button0"
        android:textSize="@dimen/buttonSize"
        app:layout_constraintBottom_toBottomOf="@id/guideline9"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        tools:ignore="MissingConstraints,SpUsage" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button_plus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/plus"
        android:textSize="@dimen/buttonSize"
        app:layout_constraintTop_toTopOf="@id/guideline5"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        tools:ignore="MissingConstraints,SpUsage" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button_minus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/minus"
        android:textSize="@dimen/buttonSize"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline6"
        tools:ignore="MissingConstraints,SpUsage" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button_multiply"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/multiply"
        android:textSize="@dimen/buttonSize"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline7"
        tools:ignore="MissingConstraints,SpUsage" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button_divide"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/divide"
        android:textSize="@dimen/buttonSize"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline8"
        tools:ignore="MissingConstraints,SpUsage" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button_percent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/percent"
        android:textSize="@dimen/buttonSize"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline8"
        tools:ignore="MissingConstraints,SpUsage" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button_delete_symbol"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/deleteSymbol"
        android:textSize="@dimen/buttonSize"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toTopOf="@+id/guideline8"
        tools:ignore="MissingConstraints,SpUsage" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button_all_clear"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/allClear"
        android:textSize="@dimen/buttonSize"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toStartOf="@+id/guideline1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline8"
        tools:ignore="MissingConstraints,SpUsage" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button_comma"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/comma"
        android:textSize="@dimen/buttonSize"
        app:layout_constraintBottom_toBottomOf="@id/guideline9"
        app:layout_constraintEnd_toStartOf="@+id/guideline1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        tools:ignore="MissingConstraints,SpUsage" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button_equals"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/equals"
        android:textSize="@dimen/buttonSize"
        app:layout_constraintBottom_toBottomOf="@id/guideline9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        tools:ignore="MissingConstraints,SpUsage" />

</android.support.constraint.ConstraintLayout>